reafctored some files for BEM

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="dist/app.css">
 </head>
 <body>
-    <!-- styles are here only for quick testing! -->
-    <h1 style="text-align:center;padding-top:64px;transition:all 3s">SHOP PAGE - HEADER</h1>
+    <div class="alert alert_warning">
+        <p class="alert__text ">Just an ordinary gas cloud. But watch out, because that's no ordinary gas cloud! -Professor Putricide
+        </p>
+        <span class="alert__button alert__button_remove_right">&#10006</span>
+    </div>
 
-    <div class="alert"><span>Hey here is some information!</span> <span class="alert__button_close">X</span></div>
+    <!-- styles are here only for quick testing! -->
+    <h1 style="text-align:center;padding-top:84px;transition:all 2s">SHOP PAGE - HEADER</h1>
+
     <div class="offer-panel"></div>
     
     <!-- styles are here only for quick testing! -->
