--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="alert alert_warning">
         <p class="alert__text ">Just an ordinary gas cloud. But watch out, because that's no ordinary gas cloud! -Professor Putricide
         </p>
-        <span class="alert__button alert__button_remove_right">&#10006</span>
+        <span class="alert__button alert__button_right_remove">&#10006</span>
     </div>
 
     <!-- styles are here only for quick testing! -->
-    <h1 style="text-align:center;padding-top:84px;transition:all 2s">SHOP PAGE - HEADER</h1>
+    <h1 style="text-align:center;padding-top:84px;height:300px;transition:all 2s">SHOP PAGE - HEADER</h1>
 
     <div class="offer-panel"></div>
     
