alert function now takes object as an argument

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="dist/app.css">
 </head>
 <body>
-  <!-- styles are here only for quick testing! -->
-  <h1 style="text-align:center;padding-top:84px;height:300px;transition:all 2s">SHOP PAGE - HEADER</h1>
+  
+  <h1 style="text-align:center;padding: 16px 0;transition:all 2s">SHOP PAGE - HEADER</h1>
 
   <div class="offer-panel"></div>
   
   <!-- styles are here only for quick testing! -->
   <h1 style="text-align:center;padding-top: 64px">SHOP PAGE - FOOTER</h1>
-  <script src="dist/app.js"></script>
+  <script src="/dist/app.js"></script>
 </body>
 </html>
